--- a/Blankf7/platforms/browser/www/visitors.html
+++ b/Blankf7/platforms/browser/www/visitors.html
@@ -458,70 +458,70 @@
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Emerenciana</div>
+            <div class="item-title">Emerenciana Reroma</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Oneng</div>
+            <div class="item-title">Oneng Figueroa</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Ben</div>
+            <div class="item-title">Ben Figueroa</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Maria</div>
+            <div class="item-title">Maria Santos</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Gina</div>
+            <div class="item-title">Gina Santos</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Angela</div>
+            <div class="item-title">Angela Figueroa</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Alyonna</div>
+            <div class="item-title">Alyonna Santos</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Alyssa</div>
+            <div class="item-title">Alyssa Santos</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Christian</div>
+            <div class="item-title">Christian Reroma</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Kent</div>
+            <div class="item-title">Kent Santos</div>
           </div>
         </div>
       </li>
@@ -533,105 +533,105 @@
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Emil</div>
+            <div class="item-title">Jacob Policarpio</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">Christine Policarpio</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">Donnalyn Bartolome</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">Laimer Matsumoto</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">J Lou</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">Zach Herron</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">Royalty Brown</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">James Charles</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">Emma Chamberlain</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">Anne Curtis Smith</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">Ikumi Hisamatsu</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">Yuka Ogura</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Karl</div>
+            <div class="item-title">Yuko Araki</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Joseph</div>
+            <div class="item-title">Miwako Kakei</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Santos</div>
+            <div class="item-title">Rena Takeda</div>
           </div>
         </div>
       </li>
@@ -639,39 +639,123 @@
   </div>
   <div class="list-group">
     <ul>
-      <li class="list-group-title">OTHERS</li>
+      <li class="list-group-title">Artists</li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Emil</div>
+            <div class="item-title">Gordon Ramsey</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Fernan</div>
+            <div class="item-title">Gary Valenciano</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Karl</div>
+            <div class="item-title">Kobe Bryant</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Joseph</div>
+            <div class="item-title">Lebron James</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Santos</div>
+            <div class="item-title">Coco Martin</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">James Harden</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Kendall Jenner</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Janella Salvador</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Ylona Garcia</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">James Reid</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Enrique Gil</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Daniel Padilla</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Kathryn Bernardo</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Nadine Lustre</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Liza Soberano</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Magic Johnson</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Patrick Reroma</div>
           </div>
         </div>
       </li>
