--- a/Blankf7/www/food.html
+++ b/Blankf7/www/food.html
@@ -41,14 +41,13 @@
           <div class="page-content">
             <div class="list media-list">
   <ul>
-    <li class="list-group-title">VIAND</li>
+    <li class="list-group-title">Lunch Menu</li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/adobo.jpg" width="70"/></div>
+        <div class="item-media"><img src="images/ravioli.jpg" width="70" height="60"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Adobo</div>
-            <div class="title-after">₱85</div>
+            <div class="item-title">Ravioli</div>
           </div>
           <div class="item-subtitle">Beatles</div>
         </div>
@@ -56,11 +55,10 @@
     </li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/afritada.jpg" width="70"/></div>
+        <div class="item-media"><img src="images/sweetbread.jpg" width="70" height="60"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Yellow Submarine</div>
-            <div class="title-after">₱85</div>
+            <div class="item-title">Roast Sweetbread</div>
           </div>
           <div class="item-subtitle">Beatles</div>
         </div>
@@ -68,11 +66,10 @@
     </li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/bulalo.jpg" width="70"/></div>
+        <div class="item-media"><img src="images/scallops.jpg" width="70" height="60"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Yellow Submarine</div>
-            <div class="title-after">₱85</div>
+            <div class="item-title">Scallops from the Isle of Skye</div>
           </div>
           <div class="item-subtitle">Beatles</div>
         </div>
@@ -80,11 +77,76 @@
     </li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/kinilaw.jpg" width="70"/></div>
+        <div class="item-media"><img src="images/foiegrass.jpg" width="70" height="60"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Yellow Submarine</div>
-            <div class="title-after">₱85</div>
+            <div class="item-title">Pressed foie grass</div>
+          </div>
+          <div class="item-subtitle">Beatles</div>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media"><img src="images/trout.jpg" width="70" height="60"/></div>
+        <div class="item-inner">
+          <div class="item-title-row">
+            <div class="item-title">Cured Sea Trout</div>
+          </div>
+          <div class="item-subtitle">Beatles</div>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media"><img src="images/agnolotti.jpg" width="70" height="60"/></div>
+        <div class="item-inner">
+          <div class="item-title-row">
+            <div class="item-title">Agnolotti</div>
+          </div>
+          <div class="item-subtitle">Beatles</div>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media"><img src="images/cotedeporc.jpg" width="70" height="60"/></div>
+        <div class="item-inner">
+          <div class="item-title-row">
+            <div class="item-title">Cote de Porc</div>
+          </div>
+          <div class="item-subtitle">Beatles</div>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media"><img src="images/cornishskate.jpg" width="70" height="60"/></div>
+        <div class="item-inner">
+          <div class="item-title-row">
+            <div class="item-title">Cornish Skate</div>
+          </div>
+          <div class="item-subtitle">Beatles</div>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media"><img src="images/walnutwhip.jpg" width="70" height="60"/></div>
+        <div class="item-inner">
+          <div class="item-title-row">
+            <div class="item-title">Walnut Whip</div>
+          </div>
+          <div class="item-subtitle">Beatles</div>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media"><img src="images/custardtart.jpg" width="70" height="60"/></div>
+        <div class="item-inner">
+          <div class="item-title-row">
+            <div class="item-title">Custard Tart</div>
           </div>
           <div class="item-subtitle">Beatles</div>
         </div>
@@ -97,7 +159,6 @@
         <div class="item-inner">
           <div class="item-title-row">
             <div class="item-title">Red Wine</div>
-            <div class="title-after">₱85</div>
           </div>
           <div class="item-subtitle">Alcohol</div>
         </div>
@@ -109,7 +170,6 @@
         <div class="item-inner">
           <div class="item-title-row">
             <div class="item-title">Beer</div>
-            <div class="title-after">₱85</div>
           </div>
           <div class="item-subtitle">Alcohol</div>
         </div>
@@ -121,7 +181,6 @@
         <div class="item-inner">
           <div class="item-title-row">
             <div class="item-title">Red Wine</div>
-            <div class="title-after">₱85</div>
           </div>
           <div class="item-subtitle">Alcohol</div>
         </div>
@@ -133,7 +192,6 @@
         <div class="item-inner">
           <div class="item-title-row">
             <div class="item-title">Red Wine</div>
-            <div class="title-after">₱85</div>
           </div>
           <div class="item-subtitle">Alcohol</div>
         </div>
@@ -142,11 +200,54 @@
     <li class="list-group-title">DESSERTS</li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/smores.jpg" width="70"/></div>
+        <div class="item-media"><img src="images/lemonadeparfait.jpg" width="70" height="60"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">S'mores</div>
-            <div class="title-after">₱85</div>
+            <div class="item-title">Lemonade Parfait</div>
+          </div>
+          <div class="item-subtitle">Michael Jackson</div>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media"><img src="images/chocolate.jpg" width="70" height="60"/></div>
+        <div class="item-inner">
+          <div class="item-title-row">
+            <div class="item-title">Manjari Chocolate Delice</div>
+          </div>
+          <div class="item-subtitle">Michael Jackson</div>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media"><img src="images/appletart.jpg" width="70" height="60"/></div>
+        <div class="item-inner">
+          <div class="item-title-row">
+            <div class="item-title">Caramelised Apple Tart Tatin</div>
+          </div>
+          <div class="item-subtitle">Michael Jackson</div>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media"><img src="images/montblanc.jpg" width="70" height="60"/></div>
+        <div class="item-inner">
+          <div class="item-title-row">
+            <div class="item-title">Mont Blanc</div>
+          </div>
+          <div class="item-subtitle">Michael Jackson</div>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media"><img src="images/hazelnut.jpg" width="70" height="60"/></div>
+        <div class="item-inner">
+          <div class="item-title-row">
+            <div class="item-title">Hazelnut Souffle</div>
           </div>
           <div class="item-subtitle">Michael Jackson</div>
         </div>
