--- a/Blankf7/platforms/browser/www/index.html
+++ b/Blankf7/platforms/browser/www/index.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="lib/framework7/css/framework7.min.css">
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="css/my-app.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href='https://fonts.googleapis.com/css?family=Yesteryear' rel='stylesheet'>
   </head>
-  <body>
+  <body class="w3-content" style="max-width:100%;max-height:100%">
     <style type="text/css">
     a {
       line-height: 42px;
@@ -59,20 +61,23 @@
           <!-- Scrollable page content -->
           <div class="page-content">
             <div class="top">
-             <div><img src="images/eden.jpg" style="width:100%"></div>
-                <div class="row">
-     <div class="column">
-        <img src="images/hand.jpg" height="130" style="width:100%">
-      </div>
-      <div class="column">
-       <img src="images/sachznawed.jpg" height="130" style="width:100%">
-          </div>
-      <div class="column">
-         <img src="images/flower.jpg" height="130" style="width:100%">
-        </div>
-      </div>
+             <div class="w3-half"><img src="images/eden.jpg" style="background-size: cover; height: 100%; background-repeat: no-repeat; width: 100%"></div>
+  <div class="w3-row" style="height: 100%;max-width: 100%;width: 100%">
+    <div class="w3-third" style="width: 33.3%; height: 100%;max-width: 100%">
+      <img src="images/hand.jpg" style="width:100%;height: 150px;background-size: cover;background-repeat: no-repeat;max-width: 100%">
     </div>
-    <div class="green" style="background-image: url(images/purple.jpg);"><a href=/menu/><div class="click"></div></a></div>
+    <div class="w3-third" style="width: 33.3%;height: 100%;max-width: 100%">
+      <img src="images/sachznawed.jpg" style="width:100%; height: 150px;background-size: cover;background-repeat: no-repeat;max-width: 100%">
+    </div>
+    <div class="w3-third"style="width: 33.3%;height: 100%;max-width: 100%">
+      <img src="images/flower.jpg" style="width:100%;height: 150px; background-size: cover;background-repeat: no-repeat;max-width: 100%">
+    </div>
+  </div>
+    </div>
+    <div class="w3-half" style=" height:600px;max-height: 100%; max-width: 100%"><a href=/menu/><img src="images/purple.jpg" style=" background-size: cover; height: 100%; background-repeat: no-repeat; width: 100%; max-height: 100%"></div>
+
+</div></div>
+
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="lib/framework7/js/framework7.min.js"></script>
     <!-- Path to your app js-->
