--- a/Blankf7/platforms/browser/www/index.html
+++ b/Blankf7/platforms/browser/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
   <head>
     <!-- Required meta tags-->
@@ -60,21 +60,21 @@
 
           <!-- Scrollable page content -->
           <div class="page-content">
-            <div class="top">
-             <div class="w3-half"><img src="images/eden.jpg" style="background-size: cover; height: 100%; background-repeat: no-repeat; width: 100%"></div>
-  <div class="w3-row" style="height: 100%;max-width: 100%;width: 100%">
-    <div class="w3-third" style="width: 33.3%; height: 100%;max-width: 100%">
+            <div class="top" style="height: auto; width:100%;">
+             <div class="w3-half" style="height: auto; width:100%;"><img src="images/eden.jpg" style="background-size: cover; height: auto; background-repeat: no-repeat; width: 100%"></div>
+  <div class="w3-row" style="height: auto; width:100%;">
+    <div class="w3-third" style="width: 33.3%;height: auto;max-width: 100%">
       <img src="images/hand.jpg" style="width:100%;height: 150px;background-size: cover;background-repeat: no-repeat;max-width: 100%">
     </div>
-    <div class="w3-third" style="width: 33.3%;height: 100%;max-width: 100%">
+    <div class="w3-third" style="width: 33.3%;height: auto;max-width: 100%">
       <img src="images/sachznawed.jpg" style="width:100%; height: 150px;background-size: cover;background-repeat: no-repeat;max-width: 100%">
     </div>
-    <div class="w3-third"style="width: 33.3%;height: 100%;max-width: 100%">
+    <div class="w3-third"style="width: 33.3%;height: auto;max-width: 100%">
       <img src="images/flower.jpg" style="width:100%;height: 150px; background-size: cover;background-repeat: no-repeat;max-width: 100%">
     </div>
   </div>
     </div>
-    <div class="w3-half" style=" height:600px;max-height: 100%; max-width: 100%"><a href=/menu/><img src="images/purple.jpg" style=" background-size: cover; height: 100%; background-repeat: no-repeat; width: 100%; max-height: 100%"></div>
+    <div class="w3-half" style="height: auto; width:100%;"><a href=/menu/><img src="images/purple.jpg" style=" background-size: cover; height: 100%; background-repeat: no-repeat; width: 100%;"></div>
 
 </div></div>
 
