--- a/Blankf7/platforms/browser/www/food.html
+++ b/Blankf7/platforms/browser/www/food.html
@@ -100,91 +100,83 @@
     </li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/beer.jpg" width="70"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Beer</div>
-          </div>
-          <div class="item-subtitle">Alcohol</div>
-        </div>
+        <div class="item-media" style="height: auto; width: 100%"><div style="height:auto; width: 50%;"><p style="float: left; margin-right: 10px"><b>White Sangría</b><br>Serve a signature cocktail, like white sangría, in mason jars with a grape garnish.</p></div><img src="images/sangria.jpg" style="height: 200px; width: 250px; margin-right: 15px"/></div>
       </div>
     </li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/red-wine.jpg" width="70"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Red Wine</div>
-          </div>
-          <div class="item-subtitle">Alcohol</div>
-        </div>
+        <div class="item-media" style="height: auto; width: 100%"><img src="images/cottoncandy.jpg" style="height: 200px; width: 250px"/><div style="height:auto; width: 50%;"><p style="float: right; margin-left: 10px"><b>Cotton Candy Cocktail</b><br>A simple cocktail that actually tastes like cotton candy!</p></div></div>
       </div>
     </li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/red-wine.jpg" width="70"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Red Wine</div>
-          </div>
-          <div class="item-subtitle">Alcohol</div>
-        </div>
+        <div class="item-media" style="height: auto; width: 100%"><div style="height:auto; width: 50%;"><p style="float: left; margin-right: 10px"><b>Bellini</b><br>A Bellini cocktail is a mixture of Prosecco sparkling wine and peach purée or nectar, which originated in Venice, Italy.</p></div><img src="images/bellini.jpg" style="height: 200px; width: 250px; margin-right: 15px"/></div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media" style="height: auto; width: 100%"><img src="images/mimosa.jpg" style="height: 200px; width: 250px"/><div style="height:auto; width: 50%;"><p style="float: right; margin-left: 10px"><b>Mimosa</b><br>Red wine is a type of wine made from dark-colored (black) grape varieties.</p></div></div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media" style="height: auto; width: 100%"><div style="height:auto; width: 50%;"><p style="float: left; margin-right: 10px"><b>Pink Lemonade</b><br>Adding raspberries to homemade lemonade gives it a tangy flavor and turns it a vivid pink - perfect for drinking in the sunshine.</p></div><img src="images/pinklemonade.jpg" style="height: 200px; width: 250px; margin-right: 15px"/></div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media" style="height: auto; width: 100%"><img src="images/tea.jpeg" style="height: 200px; width: 250px"/><div style="height:auto; width: 50%;"><p style="float: right; margin-left: 10px"><b>Sweet Tea</b><br> is a popular style of iced tea commonly consumed in the United States, but especially common in the Southern United States.</p></div></div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media" style="height: auto; width: 100%"><div style="height:auto; width: 50%;"><p style="float: left; margin-right: 10px"><b>Tiger Martini</b><br>Tiger-Tini cocktails, a nod to the couple's school, were passed out at this outdoor summer wedding.</p></div><img src="images/martini.jpg" style="height: 200px; width: 250px; margin-right: 15px"/></div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media" style="height: auto; width: 100%"><img src="images/lynchburg.jpg" style="height: 200px; width: 250px"/><div style="height:auto; width: 50%;"><p style="float: right; margin-left: 10px"><b>Lynchburg Lemonade</b><br> Highlight local products like Lynchburg Lemonade in mason jars with a lemon slice garnish. </p></div></div>
       </div>
     </li>
     <li class="list-group-title">DESSERTS</li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/lemonadeparfait.jpg" width="70" height="60"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Lemonade Parfait</div>
-          </div>
-          <div class="item-subtitle">Michael Jackson</div>
-        </div>
+        <div class="item-media" style="height: auto; width: 100%"><img src="images/chocolateavocado.png" style="height: 200px; width: 250px"/><div style="height:auto; width: 50%;"><p style="float: right; margin-left: 10px"><b>CHOCOLATE AND AVOCADO MOUSSE</b><br>A surprisingly decadent pudding that is so much better for you than the egg-based classic.</p></div></div>
       </div>
     </li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/chocolate.jpg" width="70" height="60"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Manjari Chocolate Delice</div>
-          </div>
-          <div class="item-subtitle">Michael Jackson</div>
-        </div>
+        <div class="item-media" style="height: auto; width: 100%"><div style="height:auto; width: 50%;"><p style="float: left; margin-right: 10px"><b>CHEESECAKE IN A JAM-JAR</b><br>Almost as naughty as a regular cheesecake, but the almonds in the base and the Greek yoghurt mixed into the topping mean that it’s a more nourishing version!</p></div><img src="images/jambar.png" style="height: 200px; width: 250px; margin-right: 15px"/></div>
       </div>
     </li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/appletart.jpg" width="70" height="60"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Caramelised Apple Tart Tatin</div>
-          </div>
-          <div class="item-subtitle">Michael Jackson</div>
-        </div>
+        <div class="item-media" style="height: auto; width: 100%"><img src="images/bananaice.jpg" style="height: 200px; width: 250px"/><div style="height:auto; width: 50%;"><p style="float: right; margin-left: 10px"><b>BANANA ICE CREAM</b><br>It’s a one-ingredient, dairy-free, fat-free ice cream with no added sugar that you don’t need an ice cream machine to make.</p></div></div>
       </div>
     </li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/montblanc.jpg" width="70" height="60"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Mont Blanc</div>
-          </div>
-          <div class="item-subtitle">Michael Jackson</div>
-        </div>
+        <div class="item-media" style="height: auto; width: 100%"><div style="height:auto; width: 50%;"><p style="float: left; margin-right: 10px"><b>CARROT CAKE MACAROONS</b><br>These are the coconut macaroons of my childhood, updated to taste a lot like carrot cake but without all that butter icing.</p></div><img src="images/cakemacarons.png" style="height: 200px; width: 250px; margin-right: 15px"/></div>
       </div>
     </li>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="images/hazelnut.jpg" width="70" height="60"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Hazelnut Souffle</div>
-          </div>
-          <div class="item-subtitle">Michael Jackson</div>
-        </div>
+        <div class="item-media" style="height: auto; width: 100%"><img src="images/berrybowl.png" style="height: 200px; width: 250px"/><div style="height:auto; width: 50%;"><p style="float: right; margin-left: 10px"><b>FROZEN BERRY BREAKFAST BOWL</b><br>Acai berries are one of the latest superfoods to reach our shores from South America and, among the many wondrous claims made of them, they are said to boost energy levels.</p></div></div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media" style="height: auto; width: 100%"><div style="height:auto; width: 50%;"><p style="float: left; margin-right: 10px"><b>PEANUT BUTTER AND RASPBERRY JAM PANCAKES</b><br>This is a simple gluten-free pancake recipe that provides lots of energy but won’t slow you down.</p></div><img src="images/pancake.png" style="height: 200px; width: 250px; margin-right: 15px"/></div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media" style="height: auto; width: 100%"><img src="images/bombe.jpg" style="height: 200px; width: 250px"/><div style="height:auto; width: 50%;"><p style="float: right; margin-left: 10px"><b>CHRISTMAS BOMBE</b><br>With a surprise frozen creamy filling dotted with sweet festive ingredients, this is a great dessert for Christmas.</p></div></div>
+      </div>
+    </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media" style="height: auto; width: 100%"><div style="height:auto; width: 50%;"><p style="float: left; margin-right: 10px"><b>CRANBERRY MINCE PIES</b><br>These cranberry mince pies are the perfect treat for after Christmas dinner, or as a late night snack with a glass of mulled wine.</p></div><img src="images/pies.jpg" style="height: 200px; width: 250px; margin-right: 15px"/></div>
       </div>
     </li>
   </ul>
