--- a/Blankf7/platforms/browser/www/dresses.html
+++ b/Blankf7/platforms/browser/www/dresses.html
@@ -1,110 +1,60 @@
-<div class="page">
-  <div class="navbar">
-    <!-- Additional "navbar-inner-large" class on navbar-inner -->
-    <div class="navbar-inner navbar-inner-large sliding">
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- Required meta tags-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- Color theme for statusbar -->
+    <meta name="theme-color" content="#2196f3">
+    <!-- Your app title -->
+    <title>My App</title>
+    <!-- Path to Framework7 Library Bundle CSS -->
+    <link rel="stylesheet" href="path/to/framework7.bundle.min.css">
+    <!-- Path to your custom app styles-->
+    <link rel="stylesheet" href="path/to/my-app.css">
+  </head>
+  <body>
+    <!-- App root element -->
+    <div id="app">
+      <!-- Statusbar overlay -->
+      <div class="statusbar"></div>
+
+      <!-- Your main view, should have "view-main" class -->
+      <div class="view view-main">
+        <!-- Initial Page, "data-name" contains page name -->
+        <div data-name="home" class="page">
+
+          <!-- Top Navbar -->
+          <div class="navbar">
+    <div class="navbar-inner sliding">
       <div class="left">
         <a class="link back">
           <i class="icon icon-back"></i>
           <span class="ios-only">Back</span>
         </a>
       </div>
-      <!-- Large title element -->
+      <div class="title">Fixed Navbar</div>
     </div>
   </div>
-  <div class="page-content">
-     <div class="list media-list">
-  <ul>
-    <li class="list-group-title">MEN</li>
-    <li>
-      <div class="item-content">
-        <div class="item-media"><img src="images/adobo.jpg" width="70"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Adobo</div>
-            <div class="title-after">₱85</div>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="item-content">
-        <div class="item-media"><img src="images/afritada.jpg" width="70"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Yellow Submarine</div>
-            <div class="title-after">₱85</div>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="item-content">
-        <div class="item-media"><img src="images/bulalo.jpg" width="70"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Yellow Submarine</div>
-            <div class="title-after">₱85</div>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="item-content">
-        <div class="item-media"><img src="images/kinilaw.jpg" width="70"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Yellow Submarine</div>
-            <div class="title-after">₱85</div>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-title"><center>WOMEN</center></li>
-    <li>
-      <div class="item-content">
-        <div class="item-media"><img src="images/awe.jpg" width="70"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Red Wine</div>
-            <div class="title-after">₱85</div>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="item-content">
-        <div class="item-media"><img src="images/beer.jpg" width="70"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Beer</div>
-            <div class="title-after">₱85</div>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="item-content">
-        <div class="item-media"><img src="images/red-wine.jpg" width="70"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Red Wine</div>
-            <div class="title-after">₱85</div>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="item-content">
-        <div class="item-media"><img src="images/red-wine.jpg" width="70"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Red Wine</div>
-            <div class="title-after">₱85</div>
-          </div>
-        </div>
-      </div>
-    </li>
-  </ul>
+
+          <!-- Bottom Toolbar -->
+          <!-- Scrollable page content -->
+          <div class="page-content">
+<div data-effect="cube" class="swiper-container swiper-init demo-swiper demo-swiper-cube swiper-container-cube swiper-container-3d swiper-container-horizontal">
+<div class="swiper-wrapper" style="transform-origin: 50% 50% -128px; transform: translate3d(0px, 0px, 0px) rotateX(0deg) rotateY(-720deg); transition-duration: 0ms;">
+<div class="swiper-slide" style="transform: rotateX(0deg) rotateY(0deg) translate3d(0px, 0px, 0px); transition-duration: 0ms; height: auto; width: 100%;"><img src="images/dress1.jpg" style="height:auto;background-size: cover; background-repeat: no-repeat; width: 100%;"><div class="swiper-slide-shadow-left" style="opacity: 0; transition-duration: 0ms;"></div><div class="swiper-slide-shadow-right" style="opacity: 1; transition-duration: 0ms;"></div></div>
+<div class="swiper-slide" style="transform: rotateX(0deg) rotateY(0deg) translate3d(0px, 0px, 0px); transition-duration: 0ms; height: auto; width: 100%;"><img src="images/dress2.jpg" style="height:auto;background-size: cover; background-repeat: no-repeat; width: 100%;"><div class="swiper-slide-shadow-left" style="opacity: 0; transition-duration: 0ms;"></div><div class="swiper-slide-shadow-right" style="opacity: 1; transition-duration: 0ms;"></div></div>
+<div class="swiper-slide" style="transform: rotateX(0deg) rotateY(0deg) translate3d(0px, 0px, 0px); transition-duration: 0ms; height: auto; width: 100%;"><img src="images/dress3.jpg" style="height:auto;background-size: cover; background-repeat: no-repeat; width: 100%;"><div class="swiper-slide-shadow-left" style="opacity: 0; transition-duration: 0ms;"></div><div class="swiper-slide-shadow-right" style="opacity: 1; transition-duration: 0ms;"></div></div>
+<div class="swiper-cube-shadow" style="height: 256px; transform: translate3d(0px, 148px, -128px) rotateX(90deg) rotateZ(0deg) scale(0.94);"></div></div>
+<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
 </div>
-  </div>
-</div>
+        </div>
+      </div>
+    </div>
+    <!-- Path to Framework7 Library Bundle JS-->
+    <script type="text/javascript" src="path/to/framework7.bundle.min.js"></script>
+    <!-- Path to your app js-->
+    <script type="text/javascript" src="path/to/my-app.js"></script>
+  </body>
+</html>
