--- a/Blankf7/www/index.html
+++ b/Blankf7/www/index.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href='https://fonts.googleapis.com/css?family=Yesteryear' rel='stylesheet'>
   </head>
-  <body class="w3-content" style="max-width:100%;max-height:100%">
+  <body class="w3-content" style="max-width:100%;max-height:100%; background-image: url();">
     <style type="text/css">
     a {
       line-height: 42px;
@@ -59,22 +59,8 @@
           <!-- Toolbar -->
 
           <!-- Scrollable page content -->
-          <div class="page-content">
-            <div class="top" style="height: auto; width:100%;">
-             <div class="w3-half" style="height: auto; width:100%;"><img src="images/eden.jpg" style="background-size: cover; height: auto; background-repeat: no-repeat; width: 100%"></div>
-  <div class="w3-row" style="height: auto; width:100%;">
-    <div class="w3-third" style="width: 33.3%;height: auto;max-width: 100%">
-      <img src="images/hand.jpg" style="width:100%;height: 150px;background-size: cover;background-repeat: no-repeat;max-width: 100%">
-    </div>
-    <div class="w3-third" style="width: 33.3%;height: auto;max-width: 100%">
-      <img src="images/sachznawed.jpg" style="width:100%; height: 150px;background-size: cover;background-repeat: no-repeat;max-width: 100%">
-    </div>
-    <div class="w3-third"style="width: 33.3%;height: auto;max-width: 100%">
-      <img src="images/flower.jpg" style="width:100%;height: 150px; background-size: cover;background-repeat: no-repeat;max-width: 100%">
-    </div>
-  </div>
-    </div>
-    <div class="w3-half" style="height: auto; width:100%;"><a href=/menu/><img src="images/purple.jpg" style=" background-size: cover; height: 100%; background-repeat: no-repeat; width: 100%;"></div>
+          <div class="page-content>
+    <div class="w3-half" style="height: auto; width:100%; background-size: cover;"><a href=/menu/><img src="images/background1.jpg" style=" background-size: cover; height: 100%; background-repeat: no-repeat; width: 100%;"></div>
 
 </div></div>
 
