--- a/Blankf7/platforms/browser/www/schedule.html
+++ b/Blankf7/platforms/browser/www/schedule.html
@@ -35,8 +35,33 @@
       <!-- Large title element -->
     </div>
   </div>
-  <div class="page-content" style=:" background-color: black;">
-    <div class="sched" style="background-image: url(images/scheddd.jpg); height:410px;"></div>
+  <div class="subnavbar">
+        <div class="subnavbar-inner">
+          <div class="segmented segmented-raised">
+            <a class="button tab-link tab-link-active" href="#tab1">Schedule</a>
+            <a class="button tab-link" href="#tab2">Mapping</a>
+            <a class="button tab-link" href="#tab3">Location</a>
+          </div>
+        </div>
+      </div>
+  <div class="page-content hide-navbar-on-scroll" style=:" background-color: black;">
+    <div class="tabs">
+      <div class="tab tab-active" id="tab1">
+        <div class="block">
+          <div class="sched" style="background-image: url(images/scheddd.jpg); height:410px;"></div>
+        </div>
+      </div>
+      <div class="tab" id="tab2">
+        <div class="block">
+          <div class="sched" style="background-image: url(images/maps.png); height:410px;"></div>
+        </div>
+      </div>
+      <div class="tab" id="tab3">
+        <div class="block">
+          <div class="sched" style="background-image: url(images/edennature.jpg); height:410px;"></div>
+        </div>
+      </div>
+    </div>
     </div>
   </div>
 </div>
